syntax = "proto3";

package mora.channels.v1;

// Buffer configuration options for a channel.
message BufferOptions {
    uint64 size = 1;
    uint64 time = 2;
}

// Represents a channel with its metadata.
message Channel {
    string channel_id = 1;
    repeated string queues = 2;
    BufferOptions buffer_options = 3;
    uint64 msec_from_last_op = 4;
}

// Empty request for listing all channels.
message ListChannelsRequest {}

// Response containing a list of channels.
message ListChannelsResponse {
    repeated Channel channels = 1;
}

// Request to get a specific channel by ID.
message GetChannelRequest {
    string channel_id = 1;
}

// Response for a single channel.
message GetChannelResponse {
    string channel_id = 1;
    repeated string queues = 2;
    BufferOptions buffer_options = 3;
    
}

// Request to create a new channel.
message CreateChannelRequest {
    repeated string queues = 1;
    BufferOptions buffer_options = 2;
}

// Response after creating a channel.
message CreateChannelResponse {
    string channel_id = 1;
}

// Request to delete a channel by ID.
message DeleteChannelRequest {
    string channel_id = 1;
}

// Empty response after deleting a channel.
message DeleteChannelResponse {}

// Represents an event in a queue.
message Event {
    string timestamp = 1; // u128 as string (16 bytes)
    string queue_name = 2;
    string data = 3;
}

// Request to get events from a channel.
message GetChannelEventsRequest {
    string channel_id = 1;
    bool delete = 2; // Whether to delete events after retrieval
}

// Response containing events from a channel.
message GetChannelEventsResponse {
    repeated Event events = 1;
}

service ChannelService {
    // List all active channels.
    rpc ListChannels (ListChannelsRequest) returns (ListChannelsResponse);

    // Get a specific channel by ID.
    rpc GetChannel (GetChannelRequest) returns (GetChannelResponse);

    // Create a new channel.
    rpc CreateChannel (CreateChannelRequest) returns (CreateChannelResponse);

    // Delete a channel by ID.
    rpc DeleteChannel (DeleteChannelRequest) returns (DeleteChannelResponse);

    // Get events from a channel.
    rpc GetChannelEvents (GetChannelEventsRequest) returns (GetChannelEventsResponse);
}
